issue450/test_sequence_length_1.mlir.log
within split at ./issue450/test_sequence_length_1.mlir.decomposed.mlir:1 offset :5:10: error: failed to legalize operation 'torch.aten.len.t'
    %0 = torch.aten.len.t %arg0 : !torch.list<vtensor<[?,?,?],f32>> -> !torch.int
         ^
within split at ./issue450/test_sequence_length_1.mlir.decomposed.mlir:1 offset :5:10: note: see current operation: %0 = "torch.aten.len.t"(%arg0) : (!torch.list<vtensor<[?,?,?],f32>>) -> !torch.int
